# TrilhaBackEndJR-JUN15

./: .coverage  .env  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 8fcc9aab5e34_create_users_table.py
src/: app.py
src/database/: database.py
src/models/: models.py  schemas.py
tests/: conftest.py  test_app.py  test_db.py
