[tool.poetry]
name = "trilhabackendjr-jun15"
version = "0.1.0"
description = ""
authors = ["FelipeSantiagoMenezes <felipemsanti05@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.32"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
taskipy = "^1.13.0"
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
